--- a/safety_home/safety_home.service.client/pom.xml
+++ b/safety_home/safety_home.service.client/pom.xml
@@ -4,7 +4,7 @@
    <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>safety_home.pom</artifactId>
-  	<version>1.0.3-SNAPSHOT</version>
+  	<version>B.0.3-SNAPSHOT</version>
   	<relativePath>../pom/</relativePath>
   </parent>
  
