--- a/agenda/agenda.runner/runner/felix/config.ini
+++ b/agenda/agenda.runner/runner/felix/config.ini
@@ -28,50 +28,50 @@ felix.auto.start.1=\
 felix.auto.start.5=\
 "file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.2.jar" \
 "file:bundles/org.ops4j.pax.logging.pax-logging-service_1.6.2.jar" \
-"file:bundles/mw.container.xfaces_1.1.0.jar" \
+"file:bundles/mw.container.xfaces.osgi_1.2.0.jar" \
 "file:bundles/org.osgi.compendium_4.1.0.jar" \
 "file:bundles/org.apache.felix.log_1.0.1.jar" \
 "file:bundles/org.apache.felix.configadmin_1.2.4.jar" \
 "file:bundles/org.apache.felix.fileinstall_3.1.10.jar" \
 "file:bundles/org.ops4j.pax.configmanager_0.2.2.jar" \
-"file:bundles/mw.container.osgi_1.1.0.jar" \
-"file:bundles/mw.data.representation_1.1.0.jar" \
+"file:bundles/org.apache.felix.bundlerepository_1.4.2.jar" \
+"file:bundles/mw.container.osgi_1.2.0.jar" \
+"file:bundles/mw.data.representation.osgi_1.2.0.jar" \
+"file:bundles/mw.acl.interfaces.osgi_1.2.0.jar" \
 "file:bundles/wrap_mvn_org.bouncycastle_jce.jdk13_144_0.jar" \
-"file:bundles/mw.acl.interfaces_1.1.0.jar" \
-"file:bundles/mw.acl.upnp_1.1.0.jar" \
+"file:bundles/mw.acl.upnp.osgi_1.2.0.jar" \
 "file:bundles/org.apache.felix.upnp.basedriver_0.8.0.jar" \
-"file:bundles/mw.bus.model_1.1.0.jar" \
-"file:bundles/mw.bus.ui_1.1.0.jar" \
-"file:bundles/mw.bus.context_1.1.0.jar" \
-"file:bundles/mw.bus.service_1.1.0.jar" \
+"file:bundles/mw.bus.model.osgi_1.2.0.jar" \
+"file:bundles/mw.bus.ui.osgi_1.2.0.jar" \
+"file:bundles/mw.bus.context.osgi_1.2.0.jar" \
+"file:bundles/mw.bus.service.osgi_1.2.0.jar" \
 "file:bundles/wrap_mvn_java3d_vecmath_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_jp.go.ipa_jgcl_1.0_0.jar" \
-"file:bundles/ont.phWorld_1.1.0.jar" \
-"file:bundles/ont.profile_1.1.0.jar" \
-"file:bundles/ont.profile.uipreferences_1.1.0.jar" \
-"file:bundles/ont.profile.userid_1.1.0.jar" \
-"file:bundles/ont.profile.health_1.1.0.jar" \
-"file:bundles/ont.impairment_1.1.0.jar" \
-"file:bundles/ui.dm.mobile_1.1.3.SNAPSHOT.jar" \
-"file:bundles/ui.handler.gui.swing_1.1.3.jar" \
-"file:bundles/ui.handler.gui.swing_1.1.3.SNAPSHOT.jar" \
+"file:bundles/ont.phWorld_1.2.0.jar" \
+"file:bundles/ont.profile_1.2.0.jar" \
+"file:bundles/ont.profile.uipreferences_1.2.0.jar" \
+"file:bundles/ont.profile.userid_1.2.0.jar" \
+"file:bundles/ont.profile.health_1.2.0.jar" \
+"file:bundles/ont.impairment_1.2.0.jar" \
+"file:bundles/ui.dm.mobile_1.2.0.2MODALITIES.jar" \
+"file:bundles/ui.handler.gui.swing_1.2.0.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-api_1.0.3.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-jetty-bundle_1.0.3.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-spi_1.0.3.jar" \
-"file:bundles/security.authorizator_1.1.0.jar" \
-"file:bundles/ri.servicegateway_1.1.0.jar" \
-"file:bundles/ui.handler.web_1.1.0.jar" \
-"file:bundles/agenda.ont_1.1.1.SNAPSHOT.jar" \
-"file:bundles/agenda.client_1.1.0.jar" \
+"file:bundles/security.authorizator_1.2.0.jar" \
+"file:bundles/ri.servicegateway_1.2.0.jar" \
+"file:bundles/ui.handler.web_1.2.0.jar" \
+"file:bundles/ont.agenda_1.2.1.SNAPSHOT.jar" \
+"file:bundles/agenda.client_1.2.0.jar" \
 "file:bundles/com.mysql.jdbc_5.1.17.jar" \
 "file:bundles/wrap_mvn_activesoap_jaxp-api_1.3_0.jar" \
-"file:bundles/agenda.server_1.1.0.jar" \
-"file:bundles/agenda.eventSelection.ont_1.1.1.SNAPSHOT.jar" \
-"file:bundles/agenda.eventSelection.client_1.1.0.jar" \
-"file:bundles/agenda.gui_1.1.0.jar" \
-"file:bundles/agenda.remote_1.1.0.jar" \
-"file:bundles/agenda.eventSelection.server_1.1.0.jar"
+"file:bundles/agenda.server_1.2.0.jar" \
+"file:bundles/ont.agendaEventSelection_1.2.1.SNAPSHOT.jar" \
+"file:bundles/agenda.eventSelection.client_1.2.0.jar" \
+"file:bundles/agenda.gui_1.2.0.jar" \
+"file:bundles/agenda.remote_1.2.0.jar" \
+"file:bundles/agenda.eventSelection.server_1.2.0.jar"
 
 ##############################
 # System properties
