--- a/agenda/agenda.runner/pom.xml
+++ b/agenda/agenda.runner/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.universAAL.AALapplication</groupId>
   <artifactId>agenda.runner</artifactId>
   <packaging>jar</packaging>  
-  <version>B.0.2-SNAPSHOT</version>
+  <version>C.0.1-SNAPSHOT</version>
   <!-- version is here equal to the level of version of the middleware -->
   <name>Runner Folder</name>
 
@@ -18,12 +18,11 @@
         <configuration>
           <args>pax.configuration</args>
           <provision>
-			<!--ui.dm.mobile/1.1.3-SNAPSHOT/ has saied for Modality.gui and jack for Modality.web-->
-			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.1.3-SNAPSHOT/composite</provision> 
-			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.1.3/composite</provision>
-			<provision>mvn:org.universAAL.ui/ui.handler.gui.swing/1.1.3-SNAPSHOT</provision>
-			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.1.0/composite</provision>
-			<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/B.0.2-SNAPSHOT/composite</provision>
+          <!--          agenda C.0.1-->
+			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.2.0-2MODALITIES/composite</provision>
+			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.2.0/composite</provision>
+			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.2.0/composite</provision>
+			<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/C.0.1-SNAPSHOT/composite</provision>
 	 </provision>
         </configuration>	
       </plugin>    	
