--- a/agenda/agenda.server/pom.xml
+++ b/agenda/agenda.server/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>B.0.2-SNAPSHOT</version>
+		<version>C.0.1-SNAPSHOT</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
-	
+
 	<artifactId>agenda.server</artifactId>
 	<packaging>bundle</packaging>
 	<name>Agenda AAL Service Server</name>
@@ -19,7 +19,7 @@
 	as it sends queries to the DBMS and returns results to all other components.  
 	It communicates with Agenda Remote Service and Agenda GUI Service.
 	</description>
-	
+
 	<dependencies>
 		<!--		<dependency>-->
 		<!--			<groupId>junit</groupId>-->
@@ -35,31 +35,27 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context</artifactId>
+			<artifactId>mw.bus.context.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service</artifactId>
+			<artifactId>mw.bus.service.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.ui</artifactId>
+			<artifactId>mw.bus.ui.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation</artifactId>
+			<artifactId>mw.data.representation.osgi</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.universAAL.ontology</groupId>-->
-<!--			<artifactId>ont.phWorld</artifactId>-->
-<!--		</dependency>-->
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>agenda.ont</artifactId>
+			<artifactId>ont.agenda</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -73,7 +69,7 @@
 			<version>1.3</version>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<!--			<plugin>-->
@@ -97,7 +93,8 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Activator>org.universAAL.agenda.server.osgi.Activator</Bundle-Activator>
-						<Export-Package>org.universAAL.agenda.server, org.universAAL.agenda.server.osgi</Export-Package>
+						<Export-Package>org.universAAL.agenda.server,
+							org.universAAL.agenda.server.osgi</Export-Package>
 						<Private-Package>org.universAAL.agenda.server.unit_impl,
 							org.universAAL.agenda.server.database,org.universAAL.agenda.server.gui.wrapper</Private-Package>
 						<Import-Package>com.mysql.jdbc,*</Import-Package>
@@ -136,5 +133,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 </project>
