--- a/health/ont.health/pom.xml
+++ b/health/ont.health/pom.xml
@@ -1,14 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.universAAL.ontology</groupId>
-		<artifactId>ont.pom</artifactId>
-		<version>1.1.1-SNAPSHOT</version>
-		<relativePath>../pom/</relativePath>
+<!-- 	<parent> -->
+<!-- 		<groupId>org.universAAL.ontology</groupId> -->
+<!-- 		<artifactId>ont.pom</artifactId> -->
+<!-- 		<version>1.1.1-SNAPSHOT</version> -->
+<!-- 		<relativePath>../pom/</relativePath> -->
+<!-- 	</parent> -->
+<!--   	Remvoe when translated to Onotologies repo -->
+  	<parent>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<artifactId>health.pom</artifactId>
+		<version>B.0.1-SNAPSHOT</version>
+		<relativePath>../health.pom/</relativePath>
 	</parent>
-  	
-  	
+	
   	<artifactId>ont.health</artifactId>
   	<version>1.1.1-SNAPSHOT</version>
   	<name>HealthOntology</name>
@@ -67,20 +73,18 @@
 				<artifactId>ont.profile.health</artifactId>
 			</dependency>
 			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.healthmeasurement</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.disease</artifactId>
+			</dependency>
+			<dependency>
       			<groupId>org.mnode.ical4j</groupId>
       			<artifactId>ical4j</artifactId>
       			<version>1.0.2</version>
     		</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.healthmeasurement</artifactId>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.disease</artifactId>
-				<version>1.1.1-SNAPSHOT</version>
-			</dependency>
     	</dependencies>
   	  <build>
 			<plugins>
@@ -94,6 +98,7 @@
 							<Bundle-Activator>org.universaal.ontology.health.Activator</Bundle-Activator>
 							<Bundle-Description>${project.description}</Bundle-Description>
 							<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+							<Bundle-Version>${project.version}</Bundle-Version>
 							<Export-Package>org.universaal.ontology.health.owl.*,
 							org.universaal.ontology.health.owl.services</Export-Package>
 							<Private-Package>org.universaal.ontology.health.*</Private-Package>							
