--- a/health/ont.message/pom.xml
+++ b/health/ont.message/pom.xml
@@ -1,13 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.universAAL.ontology</groupId>
-		<artifactId>ont.pom</artifactId>
-		<version>1.1.1-SNAPSHOT</version>
-		<relativePath>../pom/</relativePath>
-	</parent>
+<!-- 	<parent> -->
+<!-- 		<groupId>org.universAAL.ontology</groupId> -->
+<!-- 		<artifactId>ont.pom</artifactId> -->
+<!-- 		<version>1.1.1-SNAPSHOT</version> -->
+<!-- 		<relativePath>../pom/</relativePath> -->
+<!-- 	</parent> -->
 
+<!-- 	Remove when transported to ontologies repo -->
+	<parent>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<artifactId>health.pom</artifactId>
+		<version>B.0.1-SNAPSHOT</version>
+		<relativePath>../health.pom/</relativePath>
+	</parent>
+	
 	<artifactId>ont.message</artifactId>
 	<version>1.1.1-SNAPSHOT</version>
 	<name>MessageOntology</name>
@@ -38,17 +46,14 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.questionnaire</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.health</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
@@ -75,6 +80,7 @@
 						<Bundle-Activator>org.universaal.ontology.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Bundle-Version>${project.version}</Bundle-Version>
 						<Export-Package>org.universaal.ontology.owl.*</Export-Package>
 						<Private-Package>org.universaal.ontology.*</Private-Package>
 					</instructions>
