--- a/health/ont.questionnaireStrategy/pom.xml
+++ b/health/ont.questionnaireStrategy/pom.xml
@@ -2,11 +2,19 @@
  
   <modelVersion>4.0.0</modelVersion>
   
-  <parent>
-    		<groupId>org.universAAL.ontology</groupId>
-    		<artifactId>ont.pom</artifactId>
-    		<version>1.1.1-SNAPSHOT</version>
-    		<relativePath>../pom/</relativePath>
+<!--   <parent> -->
+<!--     		<groupId>org.universAAL.ontology</groupId> -->
+<!--     		<artifactId>ont.pom</artifactId> -->
+<!--     		<version>1.1.1-SNAPSHOT</version> -->
+<!--     		<relativePath>../pom/</relativePath> -->
+<!-- 	</parent> -->
+
+<!-- 	Remove when transported to ontolgies repo -->
+	<parent>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<artifactId>health.pom</artifactId>
+		<version>B.0.1-SNAPSHOT</version>
+		<relativePath>../health.pom/</relativePath>
 	</parent>
 	
   <groupId>org.universAAL.ontology</groupId>
@@ -46,13 +54,11 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
       		<artifactId>ont.health</artifactId>
-      		<version>1.1.1-SNAPSHOT</version>
     	</dependency>
    
     	<dependency>
       		<groupId>org.universAAL.ontology</groupId>
       		<artifactId>ont.questionnaire</artifactId>
-      		<version>1.1.1-SNAPSHOT</version>
     	</dependency>
     
     	<dependency>
