--- a/long_term_behav/drools.reasoner/pom.xml
+++ b/long_term_behav/drools.reasoner/pom.xml
@@ -18,26 +18,26 @@
 			<artifactId>org.osgi.core</artifactId>
 			<version>1.0.1</version>
 		</dependency>
-	<dependency>
-		<groupId>org.universAAL.middleware</groupId>
-		<artifactId>mw.data.representation</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
-	</dependency>
-	<dependency>
-		<groupId>org.universAAL.middleware</groupId>
-		<artifactId>mw.bus.service</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
-	</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.data.representation</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.service</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 		<!--		<dependency>-->
 		<!--			<groupId>org.universAAL.middleware</groupId>-->
 		<!--			<artifactId>mw.bus.io</artifactId>-->
 		<!--			<version>1.0.1-SNAPSHOT</version>-->
 		<!--		</dependency>-->
-				<dependency>
-					<groupId>org.universAAL.middleware</groupId>
-					<artifactId>mw.bus.context</artifactId>
-					<version>1.1.1-SNAPSHOT</version>
-				</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.context</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 		<!--		<dependency>-->
 		<!--			<groupId>org.universAAL.ontology</groupId>-->
 		<!--			<artifactId>ont.profile</artifactId>-->
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.drools</artifactId>
-			<version>0.1.1-SNAPSHOT</version>
+			<version>B.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.drools</groupId>
