--- a/long_term_behav/ont.drools/pom.xml
+++ b/long_term_behav/ont.drools/pom.xml
@@ -3,13 +3,13 @@
 	<parent>
 		<artifactId>ont.pom</artifactId>
 		<groupId>org.universAAL.ontology</groupId>
-		<version>1.0.1</version>
+		<version>1.1.0</version>
 		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.drools</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
+	<version>B.0.1</version>
 	<description>Drools ontology</description>
 	<packaging>bundle</packaging>
 	<dependencies>
@@ -21,12 +21,12 @@
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.1.0</version>
 		</dependency>
 	</dependencies>
 	<build>
