--- a/.gitattributes
+++ b/.gitattributes
@@ -2969,6 +2969,15 @@ long_term_behav/drools.reasoner/src/main/resources/persistence.xml -text
 long_term_behav/drools.reasoner/src/main/resources/reasoner.drl -text
 long_term_behav/drools.reasoner/src/main/resources/reasonerAuxClasses.drl -text
 long_term_behav/drools.reasoner/src/main/resources/reasonerRaw.drl -text
+long_term_behav/ltba.manager/LTBA_Demo_B.0.1.launch -text
+long_term_behav/ltba.manager/LTBA_Demo_B.0.1_with_reasoner_UI_Services_DIRTYDRAFT.launch -text
+long_term_behav/ltba.manager/pom.xml -text
+long_term_behav/ltba.publisher/LTBA_Publisher_B.0.1.launch -text
+long_term_behav/ltba.publisher/LTBA_Publisher_B.0.1_OSGI_enterprise.launch -text
+long_term_behav/ltba.publisher/LTBA_Publisher_B.0.1_with_reasoner.launch -text
+long_term_behav/ltba.publisher/LTBA_Publisher_B.0.1_with_reasoner_UI.launch -text
+long_term_behav/ltba.publisher/OSGi_Enterprise_LTBA.launch -text
+long_term_behav/ltba.publisher/pom.xml -text
 long_term_behav/ltba.ui/pom.xml -text
 long_term_behav/ont.drools/pom.xml -text
 long_term_behav/ont.drools/src/main/java/org/universAAL/ontology/Activator.java -text
