--- a/.gitattributes
+++ b/.gitattributes
@@ -2972,6 +2972,7 @@ long_term_behav/drools.reasoner/src/main/resources/reasonerRaw.drl -text
 long_term_behav/ltba.manager/LTBA_Demo_B.0.1.launch -text
 long_term_behav/ltba.manager/LTBA_Demo_B.0.1_with_reasoner_UI_Services_DIRTYDRAFT.launch -text
 long_term_behav/ltba.manager/pom.xml -text
+long_term_behav/ltba.pom/pom.xml -text
 long_term_behav/ltba.publisher/LTBA_Publisher_B.0.1.launch -text
 long_term_behav/ltba.publisher/LTBA_Publisher_B.0.1_OSGI_enterprise.launch -text
 long_term_behav/ltba.publisher/LTBA_Publisher_B.0.1_with_reasoner.launch -text
