--- a/long_term_behav/ltba.pom/pom.xml
+++ b/long_term_behav/ltba.pom/pom.xml
@@ -13,41 +13,33 @@
 	<name>POM file for LTBA project</name>
 	<description>POM file for LTBA project</description>
 	<modules>
-		<module>../ltba.ont</module>
+		<module>../ont.ltba</module>
 		<module>../ltba.manager</module>
 		<module>../ltba.publisher</module>
 		<module>../ltba.ui</module>
 	</modules>
 	<dependencyManagement>
-	<dependencies>
+		<dependencies>
 			<dependency>
-			<groupId>org.universaal.middleware</groupId>
-			<artifactId>mw.data.representation</artifactId>			
-		</dependency>
-		<dependency>
-			<groupId>org.universaal.middleware</groupId>
-			<artifactId>mw.bus.service</artifactId>
-		</dependency>
-		<dependency>
-			<artifactId>ont.drools</artifactId>
-			<groupId>org.universaal.ontology</groupId>
-			<version>B.0.1</version>
-		</dependency>
-		<dependency>
-			<artifactId>drools.reasoner</artifactId>
-			<groupId>org.universaal.aalapplication</groupId>
-			<version>B.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.activityhub</artifactId>
-			<version>0.0.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.ltba</artifactId>
-			<version>B.0.1</version>
-		</dependency>
-	</dependencies>
+				<artifactId>ont.drools</artifactId>
+				<groupId>org.universaal.ontology</groupId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<artifactId>drools.reasoner</artifactId>
+				<groupId>org.universaal.aalapplication</groupId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.activityhub</artifactId>
+				<version>0.0.4</version>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.ltba</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+		</dependencies>
 	</dependencyManagement>
 </project>
