--- a/.gitattributes
+++ b/.gitattributes
@@ -2979,6 +2979,7 @@ long_term_behav/ltba.publisher/LTBA_Publisher_B.0.1_with_reasoner.launch -text
 long_term_behav/ltba.publisher/LTBA_Publisher_B.0.1_with_reasoner_UI.launch -text
 long_term_behav/ltba.publisher/OSGi_Enterprise_LTBA.launch -text
 long_term_behav/ltba.publisher/pom.xml -text
+long_term_behav/ltba.ui/artifact.composite -text
 long_term_behav/ltba.ui/pom.xml -text
 long_term_behav/ont.drools/pom.xml -text
 long_term_behav/ont.drools/src/main/java/org/universAAL/ontology/Activator.java -text
