--- a/agenda/agenda.runner/runner/felix/system.properties
+++ b/agenda/agenda.runner/runner/felix/system.properties
@@ -21,5 +21,7 @@ cyberdomo.ssdp.mx=5
 cyberdomo.ssdp.buffersize=2048
 cyberdomo.ssdp.port=13531
 org.osgi.service.http.port=8088
-#add to runner template. Mitigates timeout error on web handler: "An existing connection was forcibly closed by the remote host"
+#Allows for the specification of the Session life time as a number of minutes. This property serves the same purpose as the session-timeout element in a Web Application descriptor. The default is zero for no timeout at all.
 org.apache.felix.http.session.timeout=0
+#Connection timeout in milliseconds. The default is 60000 (60 seconds).
+org.apache.felix.http.timeout=50000
