--- a/help_when_out/hwo.mobile/pom.xml
+++ b/help_when_out/hwo.mobile/pom.xml
@@ -1,13 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-<!--   <parent>
-    <artifactId>new_services.pom</artifactId> -->
-    <groupId>org.universAAL.AALapplication</groupId>
-<!--     <version>0.1.0-SNAPSHOT</version>
-  </parent> -->
+  <groupId>org.universAAL.AALapplication</groupId>
   <artifactId>hwo.mobile</artifactId>
   <version>0.1.0-SNAPSHOT</version>
-  <name>Help When Outdoor - Mobile Module</name>
+  <name>Help When Outdoor - Mobile application</name>
   <description/>
   <packaging>bundle</packaging>
     <dependencies>
@@ -21,12 +17,7 @@
 			<artifactId>mw.data.representation</artifactId>
 			<version>1.1.0</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.io</artifactId>
-			<version>1.1.0</version>
-		</dependency>	sustituída por mw.bus.ui -->
-		<dependency> <!--  nueva  -->
+		<dependency> 
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.ui</artifactId>
 			<version>1.1.0</version>
