--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+help_when_out/hwo.mobile/.classpath
+help_when_out/hwo.mobile/.project
+help_when_out/hwo.mobile/.settings
+help_when_out/hwo.mobile/target
 help_when_out/hwo.servlet/.classpath
 help_when_out/hwo.servlet/.project
 help_when_out/hwo.servlet/target
