--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,8 @@ help_when_out/hwo.mobile/.classpath
 help_when_out/hwo.mobile/.project
 help_when_out/hwo.mobile/.settings
 help_when_out/hwo.mobile/target
+help_when_out/hwo.pom/.project
+help_when_out/hwo.pom/.settings
 help_when_out/hwo.servlet/.classpath
 help_when_out/hwo.servlet/.project
 help_when_out/hwo.servlet/target
