adapted to 1.2.0 middleware

--- a/help_when_out/hwo.pom/pom.xml
+++ b/help_when_out/hwo.pom/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>B.0</version>
+		<version>C.0</version>
 		<relativePath>../../new_services.pom</relativePath>
 	</parent>
 
 	<artifactId>hwo.pom</artifactId>
-	<version>B.0</version>
+	<version>C.0</version>
 	<packaging>pom</packaging>
 
 	<name>Help When Outdoor AAL Service</name>
