--- a/help_when_out/hwo.mobile/pom.xml
+++ b/help_when_out/hwo.mobile/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.universAAL.AALapplication</groupId>
   <artifactId>hwo.mobile</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>C.0.1-SNAPSHOT</version>
   <name>Help When Outdoor - Mobile application</name>
   <description/>
   <packaging>bundle</packaging>
@@ -14,53 +14,53 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation</artifactId>
-			<version>1.1.0</version>
+			<artifactId>mw.data.representation.osgi</artifactId>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency> 
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.ui</artifactId>
-			<version>1.1.0</version>
+			<artifactId>mw.bus.ui.osgi</artifactId>
+			<version>1.2.0</version>
 		</dependency>	
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service</artifactId>
-			<version>1.1.0</version>
+			<artifactId>mw.bus.service.osgi</artifactId>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency> <!--  añadido sms handler  -->
 			<groupId>org.universAAL.ui</groupId>
 			<artifactId>ui.handler.sms</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 		</dependency>
-		<dependency> <!--  añadido personal safety sms  -->
+	 <!--	<dependency>  añadido personal safety sms  
 			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>personal_safety.sms</artifactId>
-			<version>B.0.1-SNAPSHOT</version>
-		</dependency>
+			<version>C.0.1-SNAPSHOT</version>
+		</dependency> -->
 		<dependency>
    			<groupId>org.universAAL.ontology</groupId>
    			<artifactId>ont.phWorld</artifactId>
-   			<version>1.1.0</version>
+   			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context</artifactId>
-			<version>1.1.0</version>
+			<artifactId>mw.bus.context.osgi</artifactId>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			 <groupId>org.universAAL.middleware</groupId>
 			 <artifactId>mw.container.osgi</artifactId>
-			 <version>1.1.0</version>
+			 <version>1.2.0</version>
 		</dependency>
 		<dependency>
 			 <groupId>org.universAAL.middleware</groupId>
-			 <artifactId>mw.container.xfaces</artifactId>
-			 <version>1.1.0</version>
+			 <artifactId>mw.container.xfaces.osgi</artifactId>
+			 <version>1.2.0</version>
 		</dependency>
 	</dependencies>
     <build>
