--- a/health/health.profile.manager/pom.xml
+++ b/health/health.profile.manager/pom.xml
@@ -5,26 +5,21 @@
   <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>health.pom</artifactId>
-  	<version>B.0.1-SNAPSHOT</version>
+  	<version>C.0.1-SNAPSHOT</version>
   	<relativePath>../health.pom</relativePath>
   </parent>
 
   <artifactId>health.profile.manager</artifactId>
   <packaging>bundle</packaging>
-  <!--
-  <version>1.1.0</version>
-  -->
-
 
   <dependencies>
   	<dependency>
   		<groupId>org.universAAL.support</groupId>
   		<artifactId>itests</artifactId>
-        <version>1.1.2-SNAPSHOT</version>
   	</dependency>  	
   	<dependency>
   		<groupId>org.universAAL.middleware</groupId>
-  		<artifactId>mw.bus.service</artifactId>
+  		<artifactId>mw.bus.service.core</artifactId>
   	</dependency>  	
   	<dependency>
   		<groupId>org.universAAL.ontology</groupId>
@@ -60,7 +55,6 @@
 		      <plugin>
 		        <groupId>org.universAAL.support</groupId>
 		        <artifactId>uaal-maven-plugin</artifactId>
-		        <version>1.1.2-SNAPSHOT</version>
 		      </plugin>
 		      <plugin>
 		        <groupId>org.codehaus.mojo</groupId>
