--- a/long_term_behav/ltba.manager/pom.xml
+++ b/long_term_behav/ltba.manager/pom.xml
@@ -2,13 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>new_services.pom</artifactId>
+		<artifactId>ltba.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>B.0</version>
+		<version>B.0.2-SNAPSHOT</version>
+		<relativePath>../ltba.pom</relativePath>
 	</parent>
-	<groupId>org.universAAL.AALapplication</groupId>
 	<artifactId>ltba.manager</artifactId>
-	<version>B.0.1</version>
 	<packaging>bundle</packaging>
 	<name>LTBA manager</name>
 	<description>LTBA main module for coordinating all the LTBA components.</description>
@@ -25,6 +24,11 @@
 						<Bundle-Activator>org.universAAL.ltba.manager.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+
+						<!--
+							<Import-Package>*,org.universaal.ltba.ui.impl.main</Import-Package>
+						-->
+
 					</instructions>
 				</configuration>
 			</plugin>
@@ -43,12 +47,17 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.drools</artifactId>
-			<version>B.0.1</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.ltba</artifactId>
-			<version>B.0.1</version>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universaal.aalapplication</groupId>
+			<artifactId>ltba.ui</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
